# cloudignore

c/: Makefile  dropboxpp  dropboxpp.c
loopback/: loopback.c
objc/: LoopbackController.m  LoopbackFS.h  LoopbackFS.m  Makefile  Makefile.am  configure.ac  loop  loop.m
objc/LoopbackFS.xcodeproj/: project.pbxproj
objc/LoopbackFS.xcodeproj/project.xcworkspace/xcuserdata/Aleks.xcuserdatad/: UserInterfaceState.xcuserstate
objc/LoopbackFS.xcodeproj/xcuserdata/Aleks.xcuserdatad/xcschemes/: LoopbackFS.xcscheme
objc/the_silver_searcher/src/: ignore.c  ignore.h  log.c
